--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.4",
-    "cheerio": "^1.0.0-rc.12",
-    "puppeteer": "^19.7.5"
+    "cheerio": "^1.0.0-rc.12"
   }
 }
